fix: Fix web UI responsive layout on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -537,3 +537,4 @@ body {
 .updated-117 { opacity: 1; }
 
 /* Updated: 2026-01-03 */
+.updated-691 { opacity: 1; }
